plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'shelter.shelterbackend'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.5'
	implementation 'org.springframework.boot:spring-boot-starter-mail:2.7.5'
	implementation 'org.springframework.boot:spring-boot-starter-security:2.7.5'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.5'
	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
	implementation 'io.jsonwebtoken:jjwt:0.2'
	compileOnly 'org.projectlombok:lombok:1.18.24'
	runtimeOnly 'org.postgresql:postgresql:42.3.7'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
	testImplementation 'org.springframework.security:spring-security-test:5.7.4'
}

tasks.named('test') {
	useJUnitPlatform()
}
